--- a/servicios.html
+++ b/servicios.html
@@ -2,45 +2,55 @@
 <html lang="es">
 <head>
     <style>
-
-/* Ajustes generales (ya funciona bien en móviles) */
 img.logo {
-    width: 100%;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper {
+    display: flex;
+    flex-wrap: nowrap !important;     
+    align-items: flex-start !important;
+    justify-content: center;
+    gap: 50px;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .logo {
+    /* columna fija a la izquierda */
+    flex: 0 0 300px;
     max-width: 300px;
     height: auto;
+
+    /* comportamiento pedido */
+    margin-top: 90px;             
+    position: sticky;
+    top: 20px;                     
+    z-index: 1;                     
+  }
+
+  .content {
+    flex: 1 1 0;
+    min-width: 0;
+    max-width: 650px;
+    text-align: left;
+  }
 }
+
 @media screen and (min-width: 1180px) {
-    .logo {
-        position: sticky; /* Elimina la propiedad sticky */
-        top: 20px;
-    }
+  .logo {
+    position: sticky !important;
+    top: 20px !important;
+  }
 }
-
-/* Ajuste para escritorio */
-@media screen and (min-width: 768px) { 
-    .wrapper {
-        display: flex;  /* Alinea el logo y el contenido en fila */
-        align-items: flex-start; /* Asegura que ambos queden arriba */
-        justify-content: center; /* Mantiene el contenido centrado */
-        gap: 50px; /* Espacio entre el logo y el contenido */
-        max-width: 1000px; /* Ajusta el ancho máximo para evitar desbordamientos */
-    }
-
-    .logo {
-        max-width: 300px; /* Ajusta el tamaño del logo */
-        height: auto;
-        align-self: flex-start; /* Asegura que el logo esté arriba */
-        margin-top: 90px; /* Ajusta la distancia desde arriba */
-    }
-    .content {
-        text-align: left;
-        min-width: 645px;
-        max-width: 650px;
-    }
-}
-
 </style>
-    <link rel="stylesheet" href="styles.css">
+
+
+    <link rel="stylesheet" href="styles.css?v=2">
 
 <link rel="preload" href="logov5.svg" as="image" type="image/svg+xml">
     <!-- Favicon estándar -->
